--- a/projects/howtophotographylagostwo.html
+++ b/projects/howtophotographylagostwo.html
@@ -117,12 +117,12 @@
 
     <!-- Main -->
 
-    <main class="projects-each">
+    <main class="project-items-main">
 
-        <div class="boy-fraternity-div">
-            <h1 class="boy-fraternity-title">how to photograph lagos 2</h1>
+        <div class="project-items-words">
+            <h1 class="project-items-words-title">how to photograph lagos 2</h1>
 
-            <p class="thelastburial-paragraph"> lagos is a city where slow and steady wins the race... philosophy is not
+            <p class="project-items-words-paragraph"> lagos is a city where slow and steady wins the race... philosophy is not
                 tolerated. it’s a city where
                 calmness is
                 misinterpreted as sluggishness and weakness. but you cannot blame the people, because in a city (whose
@@ -135,7 +135,7 @@
                 check time.'
             
             </p>
-            <p class="thelastburial-paragraph">kokowa is a wrestling sport popular in northern nigeria. agile men
+            <p class="project-items-words-paragraph">kokowa is a wrestling sport popular in northern nigeria. agile men
                 wrestle
                 while gathered spectators cheer
                 their
@@ -147,7 +147,7 @@
                 for the lagos dream.
             </p>
 
-            <p class="thelastburial-paragraph">
+            <p class="project-items-words-paragraph">
                 making this project encouraged me to identify traces of communality in spaces that have been bleached
                 colourless; where
                 the liminal has atrophied into the profane, as the people seek to embrace the concept of individualism.
@@ -214,23 +214,23 @@
                     <img src="../images/arrow-forward-circle.svg" alt="arrow-forward-circle">
                 </button>
 
-                <div class="carousel-nav">
-                    <button class="carousel-indicator current-slide"></button>
-                    <button class="carousel-indicator"></button>
-                    <button class="carousel-indicator"></button>
-                    <button class="carousel-indicator"></button>
-                    <button class="carousel-indicator"></button>
-                    <button class="carousel-indicator"></button>
-                    <button class="carousel-indicator"></button>
-                    <button class="carousel-indicator"></button>
+            </div>
 
-                </div>
-
+            <div class="carousel-nav">
+                <button class="carousel-indicator current-slide"></button>
+                <button class="carousel-indicator"></button>
+                <button class="carousel-indicator"></button>
+                <button class="carousel-indicator"></button>
+                <button class="carousel-indicator"></button>
+                <button class="carousel-indicator"></button>
+                <button class="carousel-indicator"></button>
+                <button class="carousel-indicator"></button>
+            
             </div>
 
         </div>
 
-        <div class="mobile">
+        <div class="project-items-words-mobile">
 
 
             <img class="carousel-image square" src="../images/howtophotographylagos/square-mobile/1.webp"
