--- a/projects/theanotherbeginning.html
+++ b/projects/theanotherbeginning.html
@@ -46,7 +46,7 @@
     <button onclick="topFunction()" id="myBtn" title="Back to Top">Top</button>
 
     <!--- Start of Navbar -->
-<div class="header">
+    <div class="header">
 
         <nav class='navbar'>
 
@@ -114,76 +114,80 @@
 
     <!-- Main -->
 
-    <main>
+    <main class="project-items-main">
 
- 
+        <div class="project-items-words">
 
-    <div class="boy-fraternity-div">
-        <h1 class="boy-fraternity-title">the another beginning.</h1>
+            <h1 class="project-items-words-title">the another beginning.</h1>
+
+            <p class="project-items-words-paragraph">
+                the project: 'the another beginning' is a prophecy; my attempt at using photography to bring into light,
+                my
+                imagination
+                of the future. what will the world look like if the novel virus—covid-19 eventually wins the war.
+
+            </p>
+
+            <p class="project-items-words-paragraph">
+                i created it amidst the fears i suffered during the climax stage of the pandemic. i feare we might not
+                be
+                able to
+                contain the outbreak, and in the end, not survive it.
+                if the virus wins, nothing will remain but few adams and eves, with new beginnings and new ways of life.
+
+                this body of work reflects on survival, healing and the undying spirit of humans to survive, be together
+                and
+                heal.
+            </p>
+
+        </div>
+
+        <div class="main-exhibition">
+
+            <div class="carousel">
+
+                <button class="carousel-button carousel--button-left is-hidden">
+                    <img src="../images/arrow-back-circle.svg" alt="arrow-back-circle">
+                </button>
+
+                <div class="carousel-track-container">
+
+                    <ul class="carousel-track">
+
+                        <li class="carousel-slide current-slide"><img class="carousel-image"
+                                src="../images/the another beginning/1200px Jpeg/1.webp" alt="theanotherbegining"></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/the another beginning/1200px Jpeg/2.webp" alt="theanotherbegining"></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/the another beginning/1200px Jpeg/3.webp" alt="theanotherbegining"></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/the another beginning/1200px Jpeg/4.webp" alt="theanotherbegining"></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/the another beginning/1200px Jpeg/5.webp" alt="theanotherbegining"></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/the another beginning/1200px Jpeg/6.webp" alt="theanotherbegining"></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/the another beginning/1200px Jpeg/7.webp" alt="theanotherbegining"></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/the another beginning/1200px Jpeg/8.webp" alt="theanotherbegining"></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/the another beginning/1200px Jpeg/9.webp" alt="theanotherbegining"></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/the another beginning/1200px Jpeg/10.webp" alt="theanotherbegining"></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/the another beginning/1200px Jpeg/11.webp" alt="theanotherbegining"></li>
 
 
-        <p class="thelastburial-paragraph">
-            the project: 'the another beginning' is a prophecy; my attempt at using photography to bring into light, my
-            imagination
-            of the future. what will the world look like if the novel virus—covid-19 eventually wins the war.
 
-        </p>
-        <p class="thelastburial-paragraph">
-            i created it amidst the fears i suffered during the climax stage of the pandemic. i feare we might not be
-            able to
-            contain the outbreak, and in the end, not survive it.
-            if the virus wins, nothing will remain but few adams and eves, with new beginnings and new ways of life.
+                    </ul>
 
-            this body of work reflects on survival, healing and the undying spirit of humans to survive, be together and
-            heal.
-        </p>
+                </div>
 
-    </div>
-
-    <div class="main-exhibition">
-
-        <div class="carousel">
-
-            <button class="carousel-button carousel--button-left is-hidden">
-                <img src="../images/arrow-back-circle.svg" alt="arrow-back-circle">
-            </button>
-
-            <div class="carousel-track-container">
-
-                <ul class="carousel-track">
-
-                    <li class="carousel-slide current-slide"><img class="carousel-image"
-                            src="../images/the another beginning/1200px Jpeg/1.webp" alt="theanotherbegining"></li>
-                    <li class="carousel-slide"><img class="carousel-image"
-                            src="../images/the another beginning/1200px Jpeg/2.webp" alt="theanotherbegining"></li>
-                    <li class="carousel-slide"><img class="carousel-image"
-                            src="../images/the another beginning/1200px Jpeg/3.webp" alt="theanotherbegining"></li>
-                    <li class="carousel-slide"><img class="carousel-image"
-                            src="../images/the another beginning/1200px Jpeg/4.webp" alt="theanotherbegining"></li>
-                    <li class="carousel-slide"><img class="carousel-image"
-                            src="../images/the another beginning/1200px Jpeg/5.webp" alt="theanotherbegining"></li>
-                    <li class="carousel-slide"><img class="carousel-image"
-                            src="../images/the another beginning/1200px Jpeg/6.webp" alt="theanotherbegining"></li>
-                    <li class="carousel-slide"><img class="carousel-image"
-                            src="../images/the another beginning/1200px Jpeg/7.webp" alt="theanotherbegining"></li>
-                    <li class="carousel-slide"><img class="carousel-image"
-                            src="../images/the another beginning/1200px Jpeg/8.webp" alt="theanotherbegining"></li>
-                    <li class="carousel-slide"><img class="carousel-image"
-                            src="../images/the another beginning/1200px Jpeg/9.webp" alt="theanotherbegining"></li>
-                    <li class="carousel-slide"><img class="carousel-image"
-                            src="../images/the another beginning/1200px Jpeg/10.webp" alt="theanotherbegining"></li>
-                    <li class="carousel-slide"><img class="carousel-image"
-                            src="../images/the another beginning/1200px Jpeg/11.webp" alt="theanotherbegining"></li>
-
-
-
-                </ul>
+                <button class="carousel-button carousel--button-right">
+                    <img src="../images/arrow-forward-circle.svg" alt="arrow-forward-circle">
+                </button>
 
             </div>
-
-            <button class="carousel-button carousel--button-right">
-                <img src="../images/arrow-forward-circle.svg" alt="arrow-forward-circle">
-            </button>
 
             <div class="carousel-nav">
                 <button class="carousel-indicator current-slide"></button>
@@ -197,46 +201,45 @@
                 <button class="carousel-indicator"></button>
                 <button class="carousel-indicator"></button>
                 <button class="carousel-indicator"></button>
-
-
+            
+            
             </div>
 
         </div>
 
-    </div>
+        <div class="project-items-words-mobile">
 
-    <div class="mobile">
-
-        <img class="carousel-image" src="../images/the another beginning/350px Jpeg/1.webp"
-            alt="theanotherbeginning-mobile-image">
-        <img class="carousel-image" src="../images/the another beginning/350px Jpeg/2.webp"
-            alt="theanotherbeginning-mobile-image">
-        <img class="carousel-image" src="../images/the another beginning/350px Jpeg/3.webp"
-            alt="theanotherbeginning-mobile-image">
-        <img class="carousel-image" src="../images/the another beginning/350px Jpeg/4.webp"
-            alt="theanotherbeginning-mobile-image">
-        <img class="carousel-image" src="../images/the another beginning/350px Jpeg/5.webp"
-            alt="theanotherbeginning-mobile-image">
-        <img class="carousel-image" src="../images/the another beginning/350px Jpeg/12.webp"
-            alt="theanotherbeginning-mobile-image">
-        <img class="carousel-image" src="../images/the another beginning/350px Jpeg/7.webp"
-            alt="theanotherbeginning-mobile-image">
-        <img class="carousel-image" src="../images/the another beginning/350px Jpeg/8.webp"
-            alt="theanotherbeginning-mobile-image">
-        <img class="carousel-image" src="../images/the another beginning/350px Jpeg/9.webp"
-            alt="theanotherbeginning-mobile-image">
-        <img class="carousel-image" src="../images/the another beginning/350px Jpeg/10.webp"
-            alt="theanotherbeginning-mobile-image">
-        <img class="carousel-image" src="../images/the another beginning/350px Jpeg/11.webp"
-            alt="theanotherbeginning-mobile-image">
+            <img class="carousel-image" src="../images/the another beginning/350px Jpeg/1.webp"
+                alt="theanotherbeginning-mobile-image">
+            <img class="carousel-image" src="../images/the another beginning/350px Jpeg/2.webp"
+                alt="theanotherbeginning-mobile-image">
+            <img class="carousel-image" src="../images/the another beginning/350px Jpeg/3.webp"
+                alt="theanotherbeginning-mobile-image">
+            <img class="carousel-image" src="../images/the another beginning/350px Jpeg/4.webp"
+                alt="theanotherbeginning-mobile-image">
+            <img class="carousel-image" src="../images/the another beginning/350px Jpeg/5.webp"
+                alt="theanotherbeginning-mobile-image">
+            <img class="carousel-image" src="../images/the another beginning/350px Jpeg/12.webp"
+                alt="theanotherbeginning-mobile-image">
+            <img class="carousel-image" src="../images/the another beginning/350px Jpeg/7.webp"
+                alt="theanotherbeginning-mobile-image">
+            <img class="carousel-image" src="../images/the another beginning/350px Jpeg/8.webp"
+                alt="theanotherbeginning-mobile-image">
+            <img class="carousel-image" src="../images/the another beginning/350px Jpeg/9.webp"
+                alt="theanotherbeginning-mobile-image">
+            <img class="carousel-image" src="../images/the another beginning/350px Jpeg/10.webp"
+                alt="theanotherbeginning-mobile-image">
+            <img class="carousel-image" src="../images/the another beginning/350px Jpeg/11.webp"
+                alt="theanotherbeginning-mobile-image">
 
 
 
-    </div>
+        </div>
 
     </main>
 
     <!-- End of Main -->
+
     <!-- Start of Footer -->
 
     <footer class="footer-container">
@@ -263,7 +266,6 @@
         </div>
 
     </footer>
-
 
     <!-- End of Footer -->
 
