--- a/projects/theboysfraternity.html
+++ b/projects/theboysfraternity.html
@@ -113,101 +113,104 @@
 
     <!-- Main -->
 
-    <main>
+    <main class="project-items-main">
 
 
+        <div class="project-items-words">
 
-    <div class="boy-fraternity-div">
-        <h1 class="boy-fraternity-title boys">the boys fraternity</h1>
-        <p>
+            <h1 class="project-items-words-title boys">the boys fraternity</h1>
+         
 
-        <p class="thelastburial-paragraph">
-            uraga and ajas are masquerades found in nsukka, an igbo community in eastern nigeria. this class of
-            masquerade is
-            attributed to children between the age bracket of 8 and 15. they emerge in early december, moving as an
-            ensemble of
-            friends to both public and private spaces, entertaining people who care to offer them tips for their
-            acts, usually dance
-            and music. they make money which they share among themselves and return to their parents before
-            disbanding for the
-            christmas festival.
-        </p>
+            <p class="project-items-words-paragraph">
+                uraga and ajas are masquerades found in nsukka, an igbo community in eastern nigeria. this class of
+                masquerade is
+                attributed to children between the age bracket of 8 and 15. they emerge in early december, moving as an
+                ensemble of
+                friends to both public and private spaces, entertaining people who care to offer them tips for their
+                acts, usually dance
+                and music. they make money which they share among themselves and return to their parents before
+                disbanding for the
+                christmas festival.
+            </p>
 
-        <p class="thelastburial-paragraph">
-            in the igbo land, masquerades are embodiments of the spirit and the human worlds. the mystique
-            surrounding the
-            masquerade is one of the key components of the igbo culture that survived western influences. it is
-            generally believed
-            that masquerades are spirits of our ancestors, showing themselves either as arbiters in disputes
-            involving indigents or
-            participants in communal affairs such as festivals and rites.
-        </p>
+            <p class="project-items-words-paragraph">
+                in the igbo land, masquerades are embodiments of the spirit and the human worlds. the mystique
+                surrounding the
+                masquerade is one of the key components of the igbo culture that survived western influences. it is
+                generally believed
+                that masquerades are spirits of our ancestors, showing themselves either as arbiters in disputes
+                involving indigents or
+                participants in communal affairs such as festivals and rites.
+            </p>
 
-        <p class="thelastburial-paragraph">boys' fraternity seeks to reveal the facets and concepts of life that
-            nurtures the origin-original of
-            the african boy
-            child, using the uraga and ajas children masquerades of nsukka in eastern nigeria.
+            <p class="project-items-words-paragraph">boys' fraternity seeks to reveal the facets and concepts of life that
+                nurtures the origin-original of
+                the african boy
+                child, using the uraga and ajas children masquerades of nsukka in eastern nigeria.
 
-            from the attainment of consciousness, the african boy child wants to become many things, but as he
-            grows, he cross-fades
-            from the communal, to the individual; from his innate fantasies; the escapee of becoming the dreamth to
-            the real as not
-            wished.</p>
+                from the attainment of consciousness, the african boy child wants to become many things, but as he
+                grows, he cross-fades
+                from the communal, to the individual; from his innate fantasies; the escapee of becoming the dreamth to
+                the real as not
+                wished.
+            </p>
 
-        </p>
-    </div>
+         
+        </div>
 
-    <div class="main-exhibition">
+        <div class="main-exhibition">
 
-        <div class="carousel potrait">
+            <div class="carousel potrait">
 
-            <button class="carousel-button carousel--button-left is-hidden">
-                <img src="../images/arrow-back-circle.svg" alt="">
-            </button>
+                <button class="carousel-button carousel--button-left is-hidden">
+                    <img src="../images/arrow-back-circle.svg" alt="">
+                </button>
 
-            <div class="carousel-track-container">
+                <div class="carousel-track-container">
 
-                <ul class="carousel-track">
+                    <ul class="carousel-track">
 
-                    <li class="carousel-slide current-slide"><img class="carousel-image potrait"
-                            src="../images/the boys fraternity/1.webp" alt=" theboysfraternity" loading="lazy">
-                    </li>
-                    <li class="carousel-slide"><img class="carousel-image potrait"
-                            src="../images/the boys fraternity/2.webp" alt=" theboysfraternity" loading="lazy">
-                    </li>
-                    <li class="carousel-slide"><img class="carousel-image potrait"
-                            src="../images/the boys fraternity/3.webp" alt=" theboysfraternity" loading="lazy">
-                    </li>
-                    <li class="carousel-slide"><img class="carousel-image potrait"
-                            src="../images/the boys fraternity/4.webp" alt=" theboysfraternity" loading="lazy">
-                    </li>
-                    <li class="carousel-slide"><img class="carousel-image potrait"
-                            src="../images/the boys fraternity/5.webp" alt=" theboysfraternity" loading="lazy">
-                    </li>
-                    <li class="carousel-slide"><img class="carousel-image potrait"
-                            src="../images/the boys fraternity/6.webp" alt=" theboysfraternity" loading="lazy">
-                    </li>
-                    <li class="carousel-slide"><img class="carousel-image potrait"
-                            src="../images/the boys fraternity/7.webp" alt=" theboysfraternity" loading="lazy">
-                    </li>
-                    <li class="carousel-slide"><img class="carousel-image potrait"
-                            src="../images/the boys fraternity/8.webp" alt=" theboysfraternity" loading="lazy">
-                    </li>
-                    <li class="carousel-slide"><img class="carousel-image potrait"
-                            src="../images/the boys fraternity/9.webp" alt=" theboysfraternity" loading="lazy">
-                    </li>
-                    <li class="carousel-slide"><img class="carousel-image potrait"
-                            src="../images/the boys fraternity/10.webp" alt=" theboysfraternity" loading="lazy">
-                    </li>
+                        <li class="carousel-slide current-slide"><img class="carousel-image potrait"
+                                src="../images/the boys fraternity/1.webp" alt=" theboysfraternity" loading="lazy">
+                        </li>
+                        <li class="carousel-slide"><img class="carousel-image potrait"
+                                src="../images/the boys fraternity/2.webp" alt=" theboysfraternity" loading="lazy">
+                        </li>
+                        <li class="carousel-slide"><img class="carousel-image potrait"
+                                src="../images/the boys fraternity/3.webp" alt=" theboysfraternity" loading="lazy">
+                        </li>
+                        <li class="carousel-slide"><img class="carousel-image potrait"
+                                src="../images/the boys fraternity/4.webp" alt=" theboysfraternity" loading="lazy">
+                        </li>
+                        <li class="carousel-slide"><img class="carousel-image potrait"
+                                src="../images/the boys fraternity/5.webp" alt=" theboysfraternity" loading="lazy">
+                        </li>
+                        <li class="carousel-slide"><img class="carousel-image potrait"
+                                src="../images/the boys fraternity/6.webp" alt=" theboysfraternity" loading="lazy">
+                        </li>
+                        <li class="carousel-slide"><img class="carousel-image potrait"
+                                src="../images/the boys fraternity/7.webp" alt=" theboysfraternity" loading="lazy">
+                        </li>
+                        <li class="carousel-slide"><img class="carousel-image potrait"
+                                src="../images/the boys fraternity/8.webp" alt=" theboysfraternity" loading="lazy">
+                        </li>
+                        <li class="carousel-slide"><img class="carousel-image potrait"
+                                src="../images/the boys fraternity/9.webp" alt=" theboysfraternity" loading="lazy">
+                        </li>
+                        <li class="carousel-slide"><img class="carousel-image potrait"
+                                src="../images/the boys fraternity/10.webp" alt=" theboysfraternity" loading="lazy">
+                        </li>
 
 
-                </ul>
+                    </ul>
+
+                </div>
+
+                <button class="carousel-button carousel--button-right">
+                    <img src="../images/arrow-forward-circle.svg" alt="">
+                </button>
 
             </div>
-
-            <button class="carousel-button carousel--button-right">
-                <img src="../images/arrow-forward-circle.svg" alt="">
-            </button>
 
             <div class="carousel-nav">
                 <button class="carousel-indicator current-slide"></button>
@@ -224,24 +227,22 @@
 
         </div>
 
-    </div>
+        <div class="project-items-words-mobile">
 
-    <div class="mobile">
+            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/1.webp" alt="">
+            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/2.webp" alt="">
+            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/3.webp" alt="">
+            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/4.webp" alt="">
+            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/5.webp" alt="">
+            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/6.webp" alt="">
+            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/7.webp" alt="">
+            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/8.webp" alt="">
+            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/9.webp" alt="">
+            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/10.webp" alt="">
 
-        <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/1.webp" alt="">
-        <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/2.webp" alt="">
-        <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/3.webp" alt="">
-        <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/4.webp" alt="">
-        <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/5.webp" alt="">
-        <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/6.webp" alt="">
-        <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/7.webp" alt="">
-        <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/8.webp" alt="">
-        <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/9.webp" alt="">
-        <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/10.webp" alt="">
+        </div>
 
-    </div>
-
-        </main>
+    </main>
     <!-- End of Main -->
 
     <!-- Start of Footer -->
@@ -270,7 +271,7 @@
 
 
     <script src="../script.js" async defer></script>
-<script src="../scripts/projects.js" async defer></script>
+    <script src="../scripts/projects.js" async defer></script>
 </body>
 
 </html>
