--- a/projects/waitingforchineke.html
+++ b/projects/waitingforchineke.html
@@ -114,79 +114,86 @@
     <!-- End of Navbar-->
 
     <!-- Main -->
-    <main>
+
+    <main class="project-items-main">
+
+        <div class="project-items-words">
+            <h1 class="project-items-words-title">waiting for chineke.</h1>
 
 
+            <p class="project-items-words-paragraph">
+                waiting for chineke is a satire of the socio-religio space of the twenty-first century nigerian
+                christian.
 
-    <div class="boy-fraternity-div">
-        <h1 class="boy-fraternity-title">waiting for chineke.</h1>
+                the project title is inspired by irish playwright and novelist samuel beckett's waiting for godot. this
+                play, unarguably
+                a theatre of the absurd first theatrical success, is a two act tragi-comedy play that consists of
+                conversations between
+                vladimir and estragon, who are waiting for the arrival of the mysterious godot, who continually sends
+                word
+                that he will
+                appear but who never does.
 
+            </p>
 
-        <p class="thelastburial-paragraph">
-            waiting for chineke is a satire of the socio-religio space of the twenty-first century nigerian christian.
+            <p class="project-items-words-paragraph">
 
-            the project title is inspired by irish playwright and novelist samuel beckett's waiting for godot. this
-            play, unarguably
-            a theatre of the absurd first theatrical success, is a two act tragi-comedy play that consists of
-            conversations between
-            vladimir and estragon, who are waiting for the arrival of the mysterious godot, who continually sends word
-            that he will
-            appear but who never does.
+                but my subject matter is drawn from my weekly experience with my father’s church. my father was a
+                prophet
+                and clergyman
+                of love and faith gospel ministry; a penticostal church like a lot others that dots the streets of lagos
+                and
+                nigeria.
+                this brand of christianity prophesies doom, teaches their members to follow christ and wait upon him cos
+                ‘jesus is
+                coming very soon’.
+            </p>
 
-        </p>
-        <p class="thelastburial-paragraph">
+        </div>
 
-            but my subject matter is drawn from my weekly experience with my father’s church. my father was a prophet
-            and clergyman
-            of love and faith gospel ministry; a penticostal church like a lot others that dots the streets of lagos and
-            nigeria.
-            this brand of christianity prophesies doom, teaches their members to follow christ and wait upon him cos
-            ‘jesus is
-            coming very soon’.
-        </p>
+        <div class="main-exhibition">
 
-    </div>
+            <div class="carousel">
 
-    <div class="main-exhibition">
+                <button class="carousel-button carousel--button-left is-hidden">
+                    <img src="../images/arrow-back-circle.svg" alt="arrow-back-circle">
+                </button>
 
-        <div class="carousel">
+                <div class="carousel-track-container">
 
-            <button class="carousel-button carousel--button-left is-hidden">
-                <img src="../images/arrow-back-circle.svg" alt="arrow-back-circle">
-            </button>
+                    <ul class="carousel-track">
 
-            <div class="carousel-track-container">
+                        <li class="carousel-slide current-slide"><img class="carousel-image"
+                                src="../images/waiting for chineke/1200px Jpeg/1.webp" alt="waitingforchineke"></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/waiting for chineke/1200px Jpeg/2.webp" alt="waitingforchineke"></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/waiting for chineke/1200px Jpeg/2b.webp" alt="waitingforchineke"></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/waiting for chineke/1200px Jpeg/3.webp" alt="waitingforchineke"></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/waiting for chineke/1200px Jpeg/4.webp" alt="waitingforchineke"></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/waiting for chineke/1200px Jpeg/5.webp" alt="waitingforchineke"></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/waiting for chineke/1200px Jpeg/6.webp" alt="waitingforchineke"></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/waiting for chineke/1200px Jpeg/7.webp" alt="waitingforchineke"></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/waiting for chineke/1200px Jpeg/8.webp" alt="waitingforchineke"></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/waiting for chineke/1200px Jpeg/9.webp" alt="waitingforchineke"></li>
 
-                <ul class="carousel-track">
+                    </ul>
 
-                    <li class="carousel-slide current-slide"><img class="carousel-image"
-                            src="../images/waiting for chineke/1200px Jpeg/1.webp" alt="waitingforchineke"></li>
-                    <li class="carousel-slide"><img class="carousel-image"
-                            src="../images/waiting for chineke/1200px Jpeg/2.webp" alt="waitingforchineke"></li>
-                    <li class="carousel-slide"><img class="carousel-image"
-                            src="../images/waiting for chineke/1200px Jpeg/2b.webp" alt="waitingforchineke"></li>
-                    <li class="carousel-slide"><img class="carousel-image"
-                            src="../images/waiting for chineke/1200px Jpeg/3.webp" alt="waitingforchineke"></li>
-                    <li class="carousel-slide"><img class="carousel-image"
-                            src="../images/waiting for chineke/1200px Jpeg/4.webp" alt="waitingforchineke"></li>
-                    <li class="carousel-slide"><img class="carousel-image"
-                            src="../images/waiting for chineke/1200px Jpeg/5.webp" alt="waitingforchineke"></li>
-                    <li class="carousel-slide"><img class="carousel-image"
-                            src="../images/waiting for chineke/1200px Jpeg/6.webp" alt="waitingforchineke"></li>
-                    <li class="carousel-slide"><img class="carousel-image"
-                            src="../images/waiting for chineke/1200px Jpeg/7.webp" alt="waitingforchineke"></li>
-                    <li class="carousel-slide"><img class="carousel-image"
-                            src="../images/waiting for chineke/1200px Jpeg/8.webp" alt="waitingforchineke"></li>
-                    <li class="carousel-slide"><img class="carousel-image"
-                            src="../images/waiting for chineke/1200px Jpeg/9.webp" alt="waitingforchineke"></li>
+                </div>
 
-                </ul>
+                <button class="carousel-button carousel--button-right">
+                    <img src="../images/arrow-forward-circle.svg" alt="arrow-forward-circle">
+                </button>
+
 
             </div>
-
-            <button class="carousel-button carousel--button-right">
-                <img src="../images/arrow-forward-circle.svg" alt="arrow-forward-circle">
-            </button>
 
             <div class="carousel-nav">
                 <button class="carousel-indicator current-slide"></button>
@@ -199,40 +206,38 @@
                 <button class="carousel-indicator"></button>
                 <button class="carousel-indicator"></button>
                 <button class="carousel-indicator"></button>
-
+            
             </div>
 
         </div>
 
-    </div>
+        <div class="project-items-words-mobile">
 
-    <div class="mobile">
-
-        <img class="carousel-image" src="../images/waiting for chineke/Mobile /1.webp"
-            alt="waitngforchineke-mobile-image">
-        <img class="carousel-image" src="../images/waiting for chineke/Mobile /2.webp"
-            alt="waitngforchineke-mobile-image">
-        <img class="carousel-image" src="../images/waiting for chineke/Mobile /2b.webp"
-            alt="waitngforchineke-mobile-image">
-        <img class="carousel-image" src="../images/waiting for chineke/Mobile /3.webp"
-            alt="waitngforchineke-mobile-image">
-        <img class="carousel-image" src="../images/waiting for chineke/Mobile /4.webp"
-            alt="waitngforchineke-mobile-image">
-        <img class="carousel-image" src="../images/waiting for chineke/Mobile /5.webp"
-            alt="waitngforchineke-mobile-image">
-        <img class="carousel-image" src="../images/waiting for chineke/Mobile /6.webp"
-            alt="waitngforchineke-mobile-image">
-        <img class="carousel-image" src="../images/waiting for chineke/Mobile /7.webp"
-            alt="waitngforchineke-mobile-image">
-        <img class="carousel-image" src="../images/waiting for chineke/Mobile /8.webp"
-            alt="waitngforchineke-mobile-image">
-        <img class="carousel-image" src="../images/waiting for chineke/Mobile /9.webp"
-            alt="waitngforchineke-mobile-image">
+            <img class="carousel-image" src="../images/waiting for chineke/Mobile /1.webp"
+                alt="waitngforchineke-mobile-image">
+            <img class="carousel-image" src="../images/waiting for chineke/Mobile /2.webp"
+                alt="waitngforchineke-mobile-image">
+            <img class="carousel-image" src="../images/waiting for chineke/Mobile /2b.webp"
+                alt="waitngforchineke-mobile-image">
+            <img class="carousel-image" src="../images/waiting for chineke/Mobile /3.webp"
+                alt="waitngforchineke-mobile-image">
+            <img class="carousel-image" src="../images/waiting for chineke/Mobile /4.webp"
+                alt="waitngforchineke-mobile-image">
+            <img class="carousel-image" src="../images/waiting for chineke/Mobile /5.webp"
+                alt="waitngforchineke-mobile-image">
+            <img class="carousel-image" src="../images/waiting for chineke/Mobile /6.webp"
+                alt="waitngforchineke-mobile-image">
+            <img class="carousel-image" src="../images/waiting for chineke/Mobile /7.webp"
+                alt="waitngforchineke-mobile-image">
+            <img class="carousel-image" src="../images/waiting for chineke/Mobile /8.webp"
+                alt="waitngforchineke-mobile-image">
+            <img class="carousel-image" src="../images/waiting for chineke/Mobile /9.webp"
+                alt="waitngforchineke-mobile-image">
 
 
-    </div>
+        </div>
 
-        </main>
+    </main>
 
     <!-- End of Main -->
     <!-- Start of Footer -->
@@ -267,7 +272,7 @@
     <!-- End of Footer -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
-    
+
 
     <script src="../script.js" async defer></script>
     <script src="../scripts/projects.js" async defer></script>
