--- a/projects/whatwasdeadwasneverdead.html
+++ b/projects/whatwasdeadwasneverdead.html
@@ -117,14 +117,14 @@
 
     <!-- Main -->
 
-    <main>
+    <main class="project-items-main">
 
 
-        <div class="boy-fraternity-div">
-            <h1 class="boy-fraternity-title what">what was dead was never dead</h1>
+        <div class="project-items-words">
 
+            <h1 class="project-items-words-title what">what was dead was never dead</h1>
 
-            <p class="thelastburial-paragraph">
+            <p class="project-items-words-paragraph">
                 what was dead was never dead is an ongoing project that examines the universal belief in reincarnation
                 and
                 posthumous
@@ -137,7 +137,7 @@
                 around individuals and archetypes in ghostland.
             </p>
 
-            <p class="thelastburial-paragraph">
+            <p class="project-items-words-paragraph">
                 the world is an endless loop of the living and dead; coming and going. for instance, among the yoruba
                 people, the
                 universe is conceived as a three-storied structure: heavenworld above, earthworld and, the
@@ -152,13 +152,13 @@
                 who are
                 dead, are never dead.
             </p>
-            <p class="thelastburial-paragraph last">
+
+            <p class="project-items-words-paragraph last">
                 in this body of work, i try to capture the living-dead, by examining intimate family stories―to exhume
                 memories, popular
                 myths and taboos surrounding death, reincarnation and the universal belief in the afterlife.
 
             </p>
-
 
         </div>
 
@@ -201,20 +201,22 @@
                     <img src="../images/arrow-forward-circle.svg" alt="">
                 </button>
 
-                <div class="carousel-nav">
-                    <button class="carousel-indicator current-slide"></button>
-                    <button class="carousel-indicator"></button>
-                    <button class="carousel-indicator"></button>
-                    <button class="carousel-indicator"></button>
-                    <button class="carousel-indicator"></button>
-                    <button class="carousel-indicator"></button>
-                </div>
+               
 
+            </div>
+
+            <div class="carousel-nav">
+                <button class="carousel-indicator current-slide"></button>
+                <button class="carousel-indicator"></button>
+                <button class="carousel-indicator"></button>
+                <button class="carousel-indicator"></button>
+                <button class="carousel-indicator"></button>
+                <button class="carousel-indicator"></button>
             </div>
 
         </div>
 
-        <div class="mobile">
+        <div class="project-items-words-mobile">
 
             <img class="carousel-image" src="../images/what was dead was never dead/Mobile/1.webp" alt="">
             <img class="carousel-image" src="../images/what was dead was never dead/Mobile/2.webp" alt="">
@@ -253,7 +255,7 @@
 
 
     <script src="../projects.js" async defer></script>
-<script src="../scripts/projects.js" async defer></script>
+    <script src="../scripts/projects.js" async defer></script>
 </body>
 
 </html>
