--- a/projects/christmasandclothes.html
+++ b/projects/christmasandclothes.html
@@ -44,12 +44,14 @@
 </head>
 
 <body>
+
     <!-- Back to top button -->
+
     <button onclick="topFunction()" id="myBtn" title="Back to Top">Top</button>
 
     <!--- Start of Navbar -->
 
-<div class="header">
+    <div class="header">
 
         <nav class='navbar'>
 
@@ -117,79 +119,91 @@
 
     <!-- Main -->
 
-    <main> 
+    <main class="project-items-main">
 
-    <div class="boy-fraternity-div">
-        <h1 class="boy-fraternity-title">christmas and clothes.</h1>
+        <div class="project-items-words">
 
+            <h1 class="project-items-words-title">christmas and clothes.</h1>
 
-        <p class="thelastburial-paragraph">
-            as a child growing up in south-east nigeria, my most cherished childhood memories are the ones thathappen
-            during the
-            christmas season. it is the period where the children are allowed to visit friends andfamilies adorned with
-            special
-            dresses bought by their parents for the festivities. while the period isladen with gifts exchanged amongst
-            families,
-            friends, and neighbours, the children are transformed intosome sort of models as they brandish their new
-            outfits and
-            pose with the toys.
+            <p class="project-items-words-paragraph">
+                as a child growing up in south-east nigeria, my most cherished childhood memories are the ones
+                thathappen
+                during the
+                christmas season. it is the period where the children are allowed to visit friends andfamilies adorned
+                with
+                special
+                dresses bought by their parents for the festivities. while the period isladen with gifts exchanged
+                amongst
+                families,
+                friends, and neighbours, the children are transformed intosome sort of models as they brandish their new
+                outfits and
+                pose with the toys.
 
-        </p>
-        <p class="thelastburial-paragraph">
+            </p>
 
-            christmas and clothes is an ongoing project; a portrait series of kids in omor of
-            eastern nigeria,
-            wearing their christmas outfits, and holding their christmas toys, with poses resembling movie stars. i am
-            reflecting on
-            childhood memories by examining what is popular amongst youngsters celebrating christmas, and interrogating
-            on a deeper
-            scale - the universality of celebration which cuts across social classes.
-        </p>
+            <p class="project-items-words-paragraph">
 
-    </div>
+                christmas and clothes is an ongoing project; a portrait series of kids in omor of
+                eastern nigeria,
+                wearing their christmas outfits, and holding their christmas toys, with poses resembling movie stars. i
+                am
+                reflecting on
+                childhood memories by examining what is popular amongst youngsters celebrating christmas, and
+                interrogating
+                on a deeper
+                scale - the universality of celebration which cuts across social classes.
+            </p>
 
-    <div class="main-exhibition">
+        </div>
 
-        <div class="carousel">
+        <div class="main-exhibition">
 
-            <button class="carousel-button carousel--button-left is-hidden">
-                <img src="../images/arrow-back-circle.svg" alt="arrow-back-circle">
-            </button>
+            <div class="carousel">
 
-            <div class="carousel-track-container">
+                <button class="carousel-button carousel--button-left is-hidden">
+                    <img src="../images/arrow-back-circle.svg" alt="arrow-back-circle">
+                </button>
 
-                <ul class="carousel-track">
+                <div class="carousel-track-container">
 
-                    <li class="carousel-slide current-slide"><img class="carousel-image"
-                            src="../images/christmas and clothes/1.webp" alt="christmasandclothes" loading=""></li>
-                    <li class="carousel-slide"><img class="carousel-image" src="../images/christmas and clothes/2.webp"
-                            alt=" christmasandclothes" loading=""></li>
-                    <li class="carousel-slide"><img class="carousel-image" src="../images/christmas and clothes/3.webp"
-                            alt=" christmasandclothes" loading=""></li>
-                    <li class="carousel-slide"><img class="carousel-image" src="../images/christmas and clothes/4.webp"
-                            alt=" christmasandclothes" loading=""></li>
-                    <li class="carousel-slide"><img class="carousel-image" src="../images/christmas and clothes/5.webp"
-                            alt=" christmasandclothes" loading=""></li>
-                    <li class="carousel-slide current-slide"><img class="carousel-image"
-                            src="../images/christmas and clothes/6.webp" alt=" christmasandclothes" loading="lazy"></li>
-                    <li class="carousel-slide"><img class="carousel-image" src="../images/christmas and clothes/7.webp"
-                            alt=" christmasandclothes" loading=""></li>
-                    <li class="carousel-slide"><img class="carousel-image" src="../images/christmas and clothes/8.webp"
-                            alt=" christmasandclothes" loading=""></li>
-                    <li class="carousel-slide"><img class="carousel-image" src="../images/christmas and clothes/9.webp"
-                            alt=" christmasandclothes" loading=""></li>
-                    <li class="carousel-slide"><img class="carousel-image" src="../images/christmas and clothes/10.webp"
-                            alt=" christmasandclothes" loading=""></li>
-                    <li class="carousel-slide"><img class="carousel-image" src="../images/christmas and clothes/11.webp"
-                            alt=" christmasandclothes" loading=""></li>
+                    <ul class="carousel-track">
 
-                </ul>
+                        <li class="carousel-slide current-slide"><img class="carousel-image"
+                                src="../images/christmas and clothes/1.webp" alt="christmasandclothes" loading=""></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/christmas and clothes/2.webp" alt=" christmasandclothes" loading=""></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/christmas and clothes/3.webp" alt=" christmasandclothes" loading=""></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/christmas and clothes/4.webp" alt=" christmasandclothes" loading=""></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/christmas and clothes/5.webp" alt=" christmasandclothes" loading=""></li>
+                        <li class="carousel-slide current-slide"><img class="carousel-image"
+                                src="../images/christmas and clothes/6.webp" alt=" christmasandclothes" loading="lazy">
+                        </li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/christmas and clothes/7.webp" alt=" christmasandclothes" loading=""></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/christmas and clothes/8.webp" alt=" christmasandclothes" loading=""></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/christmas and clothes/9.webp" alt=" christmasandclothes" loading=""></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/christmas and clothes/10.webp" alt=" christmasandclothes" loading="">
+                        </li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/christmas and clothes/11.webp" alt=" christmasandclothes" loading="">
+                        </li>
 
+                    </ul>
+
+                </div>
+
+                <button class="carousel-button carousel--button-right">
+                    <img src="../images/arrow-forward-circle.svg" alt="arrow-forward-circle">
+                </button>
+
+            
             </div>
-
-            <button class="carousel-button carousel--button-right">
-                <img src="../images/arrow-forward-circle.svg" alt="arrow-forward-circle">
-            </button>
 
             <div class="carousel-nav">
                 <button class="carousel-indicator current-slide"></button>
@@ -207,34 +221,32 @@
 
         </div>
 
-    </div>
+        <div class="project-items-words-mobile">
 
-    <div class="mobile">
+            <img class="carousel-image" src="../images/christmas and clothes/Mobile/1.webp"
+                alt="christmasandclothes-mobile-image">
+            <img class="carousel-image" src="../images/christmas and clothes/Mobile/2.webp"
+                alt="christmasandclothes-mobile-image">
+            <img class="carousel-image" src="../images/christmas and clothes/Mobile/3.webp"
+                alt="christmasandclothes-mobile-image">
+            <img class="carousel-image" src="../images/christmas and clothes/Mobile/4.webp"
+                alt="christmasandclothes-mobile-image">
+            <img class="carousel-image" src="../images/christmas and clothes/Mobile/5.webp"
+                alt="christmasandclothes-mobile-image">
+            <img class="carousel-image" src="../images/christmas and clothes/Mobile/6.webp"
+                alt="christmasandclothes-mobile-image">
+            <img class="carousel-image" src="../images/christmas and clothes/Mobile/7.webp"
+                alt="christmasandclothes-mobile-image">
+            <img class="carousel-image" src="../images/christmas and clothes/Mobile/8.webp"
+                alt="christmasandclothes-mobile-image">
+            <img class="carousel-image" src="../images/christmas and clothes/Mobile/9.webp"
+                alt="christmasandclothes-mobile-image">
+            <img class="carousel-image" src="../images/christmas and clothes/Mobile/10.webp"
+                alt="christmasandclothes-mobile-image">
+            <img class="carousel-image" src="../images/christmas and clothes/Mobile/11.webp"
+                alt="christmasandclothes-mobile-image">
 
-        <img class="carousel-image" src="../images/christmas and clothes/Mobile/1.webp"
-            alt="christmasandclothes-mobile-image">
-        <img class="carousel-image" src="../images/christmas and clothes/Mobile/2.webp"
-            alt="christmasandclothes-mobile-image">
-        <img class="carousel-image" src="../images/christmas and clothes/Mobile/3.webp"
-            alt="christmasandclothes-mobile-image">
-        <img class="carousel-image" src="../images/christmas and clothes/Mobile/4.webp"
-            alt="christmasandclothes-mobile-image">
-        <img class="carousel-image" src="../images/christmas and clothes/Mobile/5.webp"
-            alt="christmasandclothes-mobile-image">
-        <img class="carousel-image" src="../images/christmas and clothes/Mobile/6.webp"
-            alt="christmasandclothes-mobile-image">
-        <img class="carousel-image" src="../images/christmas and clothes/Mobile/7.webp"
-            alt="christmasandclothes-mobile-image">
-        <img class="carousel-image" src="../images/christmas and clothes/Mobile/8.webp"
-            alt="christmasandclothes-mobile-image">
-        <img class="carousel-image" src="../images/christmas and clothes/Mobile/9.webp"
-            alt="christmasandclothes-mobile-image">
-        <img class="carousel-image" src="../images/christmas and clothes/Mobile/10.webp"
-            alt="christmasandclothes-mobile-image">
-        <img class="carousel-image" src="../images/christmas and clothes/Mobile/11.webp"
-            alt="christmasandclothes-mobile-image">
-
-    </div>
+        </div>
 
     </main>
 
@@ -262,7 +274,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
-   
+
 
     <script src="../script.js" async defer></script>
     <script src="../scripts/projects.js" async defer></script>
